--- a/ecart/src/components/Checkout/Checkout.css
+++ b/ecart/src/components/Checkout/Checkout.css
@@ -4,7 +4,16 @@
     justify-content: space-evenly;
     margin-bottom: 5rem;
 }
-
+ body{
+    background-color: #eae8ee;
+}
+.main {
+    border: 1px solid black;
+    background-color: #FFF;
+    width:500px;
+    margin: auto;
+    padding-left:10px;
+}
 .payment-card {
     display: flex;
     justify-content: space-evenly;
@@ -63,7 +72,7 @@
     font-size: 1.25rem;
     cursor: pointer;
   }
-#card {
+#card, #card1,#card2 {
    background-color: rgb(20, 196, 137); 
     border-radius: 10px;
     padding: 10px;
@@ -95,4 +104,44 @@
     padding:-10px;
     line-height: 10px;
 }
+
+
+.total {
+    display: flex;
+    justify-content: space-around;
+   margin-bottom: -30px;
+   
+    
+}
+.delivery {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    margin-bottom: -30px;
+    
+}
+.summary {
+    display: flex;
+    justify-content: space-around;
+  
+    
+}
+.totalPrice p ,small, h4{
+  
+margin-right: -20px;
+}
+.totalPrice h4 {
+  margin-left: -30px;
+}
+.cart-items-remove , .cart-items-add{
+    margin-right:5px;
+    margin-top:5px;
+    background: none;
+    padding:5px;
+    font-size: 12px;
+    border:none;
+    border: 0.5px solid grey;
+}
+
+
 
