--- a/ecart/src/components/Checkout/Checkout.css
+++ b/ecart/src/components/Checkout/Checkout.css
@@ -72,12 +72,13 @@
     font-size: 1.25rem;
     cursor: pointer;
   }
-#card, #card1,#card2 {
+#card {
    background-color: rgb(20, 196, 137); 
     border-radius: 10px;
-    padding: 10px;
     height: 300px;
     color: rgb(255, 255, 255);
+    padding:5px 0px;
+    
 }
 #card .logo {
     max-width: 60px;
@@ -108,22 +109,28 @@
 
 .total {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
    margin-bottom: -30px;
+   margin-left: 20px;
+   margin-right: 20px;
    
     
 }
 .delivery {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin-bottom: -30px;
+  display: flex;
+  justify-content: space-between;
+align-items: center;
+ margin-left: 20px;
+ margin-right: 20px;
     
 }
 .summary {
-    display: flex;
-    justify-content: space-around;
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+ margin-top: -40px;
+ margin-left: 20px;
+ margin-right: 40px;
     
 }
 .totalPrice p ,small, h4{
