--- a/ecart/src/components/Checkout/Checkout.css
+++ b/ecart/src/components/Checkout/Checkout.css
@@ -8,7 +8,7 @@
     background-color: #eae8ee;
 }
 .main {
-    border: 1px solid black;
+    border: 1px solid rgb(255, 255, 255);
     background-color: #FFF;
     width:500px;
     margin: auto;
@@ -16,10 +16,10 @@
 }
 .payment-card {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
     gap: 30px;
-    margin-right: 50px;
+  
   }
 
 .payment-card button {
@@ -27,7 +27,7 @@
   color: black;
   border: none;
   padding: 10px;
-  font-size: 20px;
+  font-size: 18px;
   cursor: pointer;
 }
 
@@ -37,7 +37,7 @@
     flex-direction: column;
     justify-content: center;
     padding: 1rem;
-    border: 1px solid #ccc;
+    border: 1px solid rgb(235, 231, 231);
     position: relative;
 }
 #form input,
