--- a/ecart/src/components/Products/Product.css
+++ b/ecart/src/components/Products/Product.css
@@ -4,13 +4,14 @@
   grid-template-rows: 1fr 1fr 1fr 1fr;
   margin-bottom: 100px;
   gap: 20px;
+  margin-left:1rem;
+
 }
 
 .products {
   border: none;
   border-radius: 10px;
   padding: 10px;
-  height: auto;
   height: 250px;
   width: 250px;
   background-color: rgb(240, 240, 240);
